gccida/c0/scope_die_for
/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scope_die_for/src/dwarf2out.c:10047:21: error: use of undeclared identifier 'debug_info_level_0'
if ( ( unsigned int)debug_info_level_0 > DINFO_LEVEL_TERSE && ( ( *( _DWORD *)&containing_scope[1] >> 14) & 1) == 0 ) 
                    ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O0/gcc-clang-O0/scope_die_for/src/obj/dwarf2out.o] Error 1
